--- a/notifications/templates/base-template-email.html
+++ b/notifications/templates/base-template-email.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>{{title}}</title>
 </head>
 
 <body style="margin: 0;">
@@ -13,76 +13,17 @@
     background-size: cover;">
       <tr style="background: rgba(0,0,0,.55); text-align: center;">
           <td colspan="3" style="padding: 15px 0;">
-          	<img src="logoZoniaB.png" style="width: 222px;">
+          	<h1>Versatile Work</h1>
           </td>
       </tr>
 
       {% block content %}
 
-			<tr style="font-family: sans-serif;">
-					<td style=" width: 20%;"></td>
-					<td style="width: 60%;padding: 0 10px; padding-bottom: 30px;">
-							<div style="
-						    margin: 0 auto;
-						    border-radius: 5px;
-						    background: rgba(0,0,0,.55);
-						    color: #fff;
-								margin-top: 50px;
-								margin-bottom: 30px;
-						    padding: 32px;
-								padding-top: 1px;">
-								<p style="text-align: center;
-							    border-bottom: 1px solid #5a4098;;
-							    padding-bottom: 15px;
-									font-size: 22px;
-    							margin-bottom: 40px;">
-									Ranking Global
-								</p>
-								<div style="background-image: url(cantante.jpg);
-							    background-position: center;
-							    background-size: cover;
-							    height: 110px;
-							    width: 110px;
-							    border-radius: 100%;
-							    text-align: center;
-							    margin: 0 auto;">
-								</div>
-								<h3 style="text-align: center;">Artist Name</h3>
-								<div style="margin: 0 auto; text-align: center;padding: 40px 0px;">
-									<div style="display: inline-block;">
-										<div style="    width: 150px;
-											display: inline-block;
-									    height: 150px;
-											border: 5px solid #5a4098;
-											border-radius: 100px;
-											">
-											<p style="text-align: center; font-size: 40px; padding: 12px 0px;"># 90</p>
-										</div>
-									</div>
-									<div style="width: 312px; text-align: center; display: inline-block; position: relative; top: 30px;">
-										<p>Hi! this is your position with respect to other artists in zonia. Do you want to see more information about your position in zonia?</p>
-											<a href="#" target="_blank" style="
-											text-decoration: none;
-											color: #fff;
-											padding: 10px 20px;
-									    background-color: #5a4098;
-									    border-radius: 5px;
-									    position: relative;
-									    top: 12px;">click here!</a>
-									</div>
-
-								</div>
-							</div>
-							<p style="text-align: center; font-size: 14px;">You are receiving informational emails from Zonia Music.<a href="#" style="text-decoration: none; color: #555;">Unsubscribe</a></p>
-					</td>
-					<td style="width: 20%;"></td>
-			</tr>
-
       {% endblock content %}
 
       <tr style="background: rgba(0,0,0,.55); text-align: center;">
           <td colspan="3" style="padding: 15px 0; font-family: sans-serif;">
-          	<p style="color:#ccc; font-size: 12px;">ZONIA MUSIC Copyright {% now "Y" %}</p>
+          	<p style="color:#ccc; font-size: 12px;">Versatile Work Copyright {% now "Y" %}</p>
           </td>
       </tr>
   </table>
